@@ -1,5 +1,9 @@
 2008-03-24  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
 
+	* src/Alarm.cs: Use TogglePlaying() to start playing.
+
+2008-03-24  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
+
 	* src/Makefile.am, build/gconf-schema-rules, build/build.mk, autogen.sh,
 	  alarm.mdp: Improve build system.
 	* src/Alarm.cs, src/VolumeFade.cs: Clean up logs.
